--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
       uses: Legion2/download-release-action@v2.0.0
       with:
         repository: sylabs/singularity
-        tag: 3.3.0
+        tag: v3.3.0
         path: downloads
         file: singularity-3.3.0.tar.gz
     - name: Install Singularity
