Update to fix archive extract step

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,7 @@ jobs:
     - name: Install Singularity
       run: |
         cd downloads
+        mkdir -p singularity
         tar -xzf singularity-3.3.0.tar.gz
         cd singularity
         ./mconfig
