--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,12 +14,13 @@ jobs:
       uses: Legion2/download-release-action@v2.0.0
       with:
         repository: sylabs/singularity
-        tag: v3.3.0
+        tag: v3.5.0
         path: downloads
-        file: singularity-3.3.0.tar.gz
+        file: singularity-3.5.0.tar.gz
     - name: Install Singularity
       run: |
-        tar -xzC downloads/singularity-3.3.0.tar.gz .
+        tar -xzf downloads/singularity-3.5.0.tar.gz
+        cd singularity
         ./mconfig
         make -C builddir
         make -C builddir install
