--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,15 +9,20 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
-    - uses: actions/setup-go@v1.0.0
-    - name: Download Singularity GitHub Release
+    - name: Download Go binary
+      uses: engineerd/configurator@v0.0.1
+      with:
+        name: "go"
+        url: https://dl.google.com/go/go1.13.4.linux-amd64.tar.gz
+        pathInArchive: "go/bin"
+    - name: Download Singularity sources from GitHub Release
       uses: Legion2/download-release-action@v2.0.0
       with:
         repository: sylabs/singularity
         tag: v3.5.0
         path: downloads
         file: singularity-3.5.0.tar.gz
-    - name: Install Singularity
+    - name: Make Install Singularity
       run: |
         tar -xzf downloads/singularity-3.5.0.tar.gz
         cd singularity
