--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,9 @@ jobs:
       with:
         name: "go"
         url: https://dl.google.com/go/go1.13.4.linux-amd64.tar.gz
-        pathInArchive: "go/bin"
+        pathInArchive: "bin"
+    - name: Go status
+      run: go --version
     - name: Download Singularity sources from GitHub Release
       uses: Legion2/download-release-action@v2.0.0
       with:
