--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,16 +9,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
-    - name: Download Go binary
-      uses: engineerd/configurator@v0.0.1
+    - uses: actions/setup-go@v1
       with:
-        name: "go"
-        url: https://dl.google.com/go/go1.13.4.linux-amd64.tar.gz
-        pathInArchive: "go/bin"
-    - name: Go status
-      run: |
-        go version
-        echo $PATH | grep go
+        go-version: '1.13'
     - name: Download Singularity sources from GitHub Release
       uses: Legion2/download-release-action@v2.0.0
       with:
@@ -35,7 +28,6 @@ jobs:
         make -C builddir install
     - name: Install Singularity Compose
       run: |
-        apt-get install python3-pip
         sudo -H pip3 install singularity-compose
     - name: Run a one-line script
       run: echo Build complete!
