--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,8 +20,16 @@ jobs:
         path: downloads
         file: singularity-3.5.0.tar.gz
     - name: Dependencies
-      run:
-        sudo apt-get install -y uuid-dev libssl-dev uuid-dev libgpgme11-dev squashfs-tools libseccomp-dev pkg-config
+      run: |
+        sudo apt-get install -y \
+        uuid-dev \
+        libssl-dev \
+        uuid-dev \
+        libgpgme11-dev \
+        squashfs-tools \
+        libseccomp-dev \
+        pkg-config \
+        python3-setuptools
     - name: Make Install Singularity
       run: |
         tar -xzf downloads/singularity-3.5.0.tar.gz
