--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,8 +22,8 @@ jobs:
     - name: Make Install Singularity
       env:
         SINGULARITY_VERSION: 3.5.0
-      run: scripts/install_singularity.sh
+      run: sudo ./scripts/install_singularity.sh
     - name: Install Singularity Compose
-      run: scripts/install_singularity_compose.sh
+      run: sudo ./scripts/install_singularity_compose.sh
     - name: Build the app
-      run: scripts/build_containers.sh
+      run: ./scripts/build_containers.sh
