--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,30 +8,42 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v1
-    - uses: actions/setup-go@v1
+    - name: Checkout
+      uses: actions/checkout@v1
+    - name: Install Packer
+      uses: yellowmegaman/github-action-get-packer@0.0.6
+    - name: Cache Build
+      id: cache-packer-build
+      uses: actions/cache@v1
       with:
-        go-version: '1.13'
-    - name: Download Singularity sources from GitHub Release
-      uses: Legion2/download-release-action@v2.0.0
-      with:
-        repository: sylabs/singularity
-        tag: v3.5.0
-        path: downloads
-        file: singularity-3.5.0.tar.gz
-    - name: Install Dependencies for Singularity
-      run: sudo bash ./scripts/install_build_dep_singularity.sh
-    - name: Build Singularity
-      env:
-        SINGULARITY_VERSION: 3.5.0
-      run: bash ./scripts/build_singularity.sh
-    - name: Install Singularity
-      run: sudo bash ./scripts/install_singularity.sh
-    - uses: actions/setup-python@v1
-      with:
-        python-version: '3.x'
-        architecture: 'x64'
-    - name: Install Singularity Compose
-      run: bash ./scripts/install_singularity_compose.sh
-    - name: Build the app
-      run: bash ./scripts/build_containers.sh
+        path: output-singularity35-generic-ubuntu1804-hyperv
+        key: ${{ runner.os }}-${{ hashfiles('packer*.json') }}
+    - name: Packer Build
+      if: steps.cache-packer-build.outputs.cache-hit != 'true'
+      run: packer build packer-ubuntu-18.04-x64-singularity.json
+      #- uses: actions/setup-go@v1
+      #  with:
+      #    go-version: '1.13'
+      #- name: Download Singularity sources from GitHub Release
+      #  uses: Legion2/download-release-action@v2.0.0
+      #  with:
+      #    repository: sylabs/singularity
+      #    tag: v3.5.0
+      #    path: downloads
+      #    file: singularity-3.5.0.tar.gz
+      #- name: Install Dependencies for Singularity
+      #  run: sudo bash ./scripts/install_build_dep_singularity.sh
+      #- name: Build Singularity
+      #  env:
+      #    SINGULARITY_VERSION: 3.5.0
+      #  run: bash ./scripts/build_singularity.sh
+      #- name: Install Singularity
+      #  run: sudo bash ./scripts/install_singularity.sh
+      #- uses: actions/setup-python@v1
+      #  with:
+      #    python-version: '3.x'
+      #    architecture: 'x64'
+      #- name: Install Singularity Compose
+      #  run: bash ./scripts/install_singularity_compose.sh
+      #- name: Build the app
+      #  run: bash ./scripts/build_containers.sh
