--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v1
     - name: Install Packer
-      uses: yellowmegaman/github-action-get-packer@0.0.6
+      run: apt-get install packer
     - name: Cache Build
       id: cache-packer-build
       uses: actions/cache@v1
