--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v1
     - name: Install Packer
-      run: apt-get install packer
+      run: sudo apt-get install -y packer
     - name: Cache Build
       id: cache-packer-build
       uses: actions/cache@v1
